use JDK 24